# CoderBhaiya

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dashboard.html  pyproject.toml
.github/: FUNDING.yml
src/: __init__.py  main.py  runtime.py  turn_loop.py
src/cli_app/: __init__.py  config.py  repl.py  server.py  streaming.py
src/hooks_lifecycle/: __init__.py  loader.py  registry.py  shell_hook.py  types.py
src/live_tools/: __init__.py  agent_tool.py  base.py  bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  registry.py  write_tool.py
src/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  lmstudio_client.py  ollama_client.py  openai_client.py  registry.py  types.py
src/skill_system/: __init__.py  injector.py  loader.py  types.py
